igt@xe_debugfs@forcewake - dmesg-warn - WARNING: CPU: .* PID: .* at drivers/gpu/drm/xe/xe_debugfs.c:.* forcewake_release
<6> [438.747690] Console: switching to colour dummy device 80x25
<6> [438.748057] [IGT] xe_debugfs: executing
<6> [438.905166] xe 0000:4d:00.0: [drm] GT suspended
<6> [438.923989] [IGT] xe_debugfs: starting subtest forcewake
<5> [438.983100] xe 0000:4d:00.0: [drm] Force wake domain (0) failed to ack sleep, ret=-110
<5> [439.041820] xe 0000:4d:00.0: [drm] Force wake domain (1) failed to ack sleep, ret=-110
<5> [439.100482] xe 0000:4d:00.0: [drm] Force wake domain (3) failed to ack sleep, ret=-110
<5> [439.159019] xe 0000:4d:00.0: [drm] Force wake domain (5) failed to ack sleep, ret=-110
<5> [439.217572] xe 0000:4d:00.0: [drm] Force wake domain (11) failed to ack sleep, ret=-110
<5> [439.276144] xe 0000:4d:00.0: [drm] Force wake domain (12) failed to ack sleep, ret=-110
<4> [439.276278] ------------[ cut here ]------------
<4> [439.276293] WARNING: CPU: 40 PID: 1852 at drivers/gpu/drm/xe/xe_debugfs.c:86 forcewake_release+0xa7/0xc0 [xe]
<4> [439.277051] Modules linked in: snd_hda_intel snd_intel_dspcfg snd_hda_codec snd_hwdep snd_hda_core snd_pcm xe drm_ttm_helper ttm video drm_suballoc_helper gpu_sched drm_display_helper drm_buddy fuse x86_pkg_temp_thermal e1000e coretemp ast kvm_intel drm_shmem_helper i2c_algo_bit drm_kms_helper syscopyarea sysfillrect kvm sysimgblt cfbfillrect cfbimgblt irqbypass ixgbe cfbcopyarea mdio crct10dif_pclmul fb ptp crc32_pclmul ghash_clmulni_intel fbdev pps_core i2c_i801 mei_me wmi intel_vsec i2c_smbus ioatdma mei dca drm drm_panel_orientation_quirks ip_tables x_tables
<4> [439.277672] CPU: 40 PID: 1852 Comm: xe_debugfs Not tainted 6.3.0-xe #1
<4> [439.277697] Hardware name: Intel Corporation WHITLEY/WHITLEY, BIOS SE5C6200.86B.0027.P15.2205121306 05/12/2022
<4> [439.277715] RIP: 0010:forcewake_release+0xa7/0xc0 [xe]
<4> [439.278279] Code: 75 28 4c 89 ef 83 c5 01 e8 86 7f f2 e0 41 38 ac 24 e5 0d 00 00 76 17 48 81 c3 98 61 00 00 40 80 fd 03 75 a9 0f 0b 0f 0b 0f 0b <0f> 0b eb d4 5b 31 c0 5d 41 5c 41 5d c3 cc cc cc cc 0f 1f 84 00 00
<4> [439.278300] RSP: 0018:ffff888179c3fd98 EFLAGS: 00010282
<4> [439.278328] RAX: 00000000ffffff92 RBX: ffff88829ae221dc RCX: ffffffff82531bf8
<4> [439.278347] RDX: 0000000000000001 RSI: 0000000000000008 RDI: ffff888179c3fc58
<4> [439.278365] RBP: 0000000000000000 R08: 0000000000000001 R09: ffffed102f387f8c
<4> [439.278381] R10: ffff888179c3fc5f R11: ffffed102f387f8b R12: ffff88829ae20000
<4> [439.278399] R13: ffff88829ae20de5 R14: ffff8882bb260008 R15: ffff8881986a3800
<4> [439.278416] FS: 00007f0efa950c00(0000) GS:ffff889bff400000(0000) knlGS:0000000000000000
<4> [439.278436] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [439.278453] CR2: 00007f0efd33b900 CR3: 000000011eba4001 CR4: 0000000000770ee0
<4> [439.278471] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
<4> [439.278486] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
<4> [439.278503] PKRU: 55555554
<4> [439.278518] Call Trace:
<4> [439.278577] <TASK>
<4> [439.278603] full_proxy_release+0x89/0x140
<4> [439.278650] __fput+0x122/0x450
<4> [439.278704] task_work_run+0xfe/0x190
<4> [439.278736] ? __pfx_task_work_run+0x10/0x10
<4> [439.278762] ? mark_held_locks+0x24/0x90
<4> [439.278812] exit_to_user_mode_prepare+0x1ab/0x1b0
<4> [439.278849] syscall_exit_to_user_mode+0x1d/0x50
<4> [439.278877] do_syscall_64+0x4c/0x90
<4> [439.278905] entry_SYSCALL_64_after_hwframe+0x72/0xdc
<4> [439.278937] RIP: 0033:0x7f0efd26e437
<4> [439.278957] Code: 64 89 02 48 c7 c0 ff ff ff ff eb bb 0f 1f 80 00 00 00 00 f3 0f 1e fa 64 8b 04 25 18 00 00 00 85 c0 75 10 b8 03 00 00 00 0f 05 <48> 3d 00 f0 ff ff 77 41 c3 48 83 ec 18 89 7c 24 0c e8 f3 fb ff ff
<4> [439.278977] RSP: 002b:00007ffecbfe29b8 EFLAGS: 00000246 ORIG_RAX: 0000000000000003
<4> [439.279006] RAX: 0000000000000000 RBX: 0000000000000005 RCX: 00007f0efd26e437
<4> [439.279022] RDX: 0000000000000001 RSI: 000056001c4d014a RDI: 0000000000000007
<4> [439.279038] RBP: 0000000000000000 R08: 0000000000000006 R09: 0000000000000059
<4> [439.279054] R10: 0000000000000000 R11: 0000000000000246 R12: 000056001c4ce410
<4> [439.279071] R13: 00007ffecbfe4c30 R14: 0000000000000000 R15: 0000000000000000
<4> [439.279129] </TASK>
<4> [439.279144] irq event stamp: 494539
<4> [439.279157] hardirqs last enabled at (494545): [<ffffffff811f45db>] __up_console_sem+0x6b/0x80
<4> [439.279188] hardirqs last disabled at (494550): [<ffffffff811f45c0>] __up_console_sem+0x50/0x80
<4> [439.279212] softirqs last enabled at (493978): [<ffffffff825407b5>] __do_softirq+0x385/0x485
<4> [439.279241] softirqs last disabled at (493971): [<ffffffff8111be95>] irq_exit_rcu+0x95/0xc0
<4> [439.279267] ---[ end trace 0000000000000000 ]---
<6> [439.280609] [IGT] xe_debugfs: exiting, ret=0
<6> [439.313105] Console: switching to colour frame buffer device 128x48